# download-google-photos

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
flows/: flow_v1.puml
src/: cli.py  factory.py  google_photos.py  mocks.py  models.py
tests/: test_cli.py  test_factory.py  test_google_photos.py  test_mocks.py  test_models.py
