[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
include = '.pyi?$'
line-length = 80
target-version = ["py310"]

[tool.coverage.report]
skip_empty = true

[tool.mypy]
exclude = ["tests"]
files = "**/*.py"
ignore_missing_imports = true
python_version = "3.10"
warn_return_any = false

[tool.poetry]
authors = ["Javier Gil <javiergilmont@gmail.com>"]
description = "Python library to download your personal albums from google photos"
name = "download-google-photos"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
authlib-httpx = "^0.1.1"
google-api-python-client = "^2.102.0"
oauth2client = "^4.1.3"
polyfactory = "^2.9.0"
pydantic = "^2.4.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-fail-under=100",
    "--no-cov-on-fail",
    "-q",
    "-ra",
]
minversion = "6.0"
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "node_modules",
]
ignore = []
select = [
    "COM",
    "DTZ",
    "E",
    "F",
    "I",
    "N",
    "PL",
    "RET",
    "W",
]

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.tomlsort]
all = true
check = false
ignore_case = true
in_place = true
no_block_comments = true
no_comments = true
no_footer_comments = true
no_header_comments = true
no_inline_comments = true
no_sort_tables = true
sort_inline_arrays = true
sort_inline_tables = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
